Various minor UI tweaks and changes, specifically dividers, text size, etc

--- a/CRM/views/entry-client.ejs
+++ b/CRM/views/entry-client.ejs
@@ -24,11 +24,14 @@
     </header>
     <div class="c-body">
         <!-- Main content here -->
-        <main class="main my-3 mx-3">
+      <main class="c-main">
+        <main class="main mt-0 mx-3">
+          <h2>Client Entry Form</h2>
+          <hr>
           <form id="formAddClient" name="addClient" method="post" action="/addClient">
 
           <!-- Client Name & Agent Assignment-->
-            <h3>Client Information</h3>
+
             <div class="form-row">
               <div class="form-group col-12 col-md-auto">
                 <label for="clientName">Client Name</label>
@@ -143,10 +146,11 @@
           <button type="submit" class="btn btn-primary btn-lg">Submit</button>
           </form>
         </main>
+      </main>
     </div>
     <footer class="c-footer">
       <!-- Footer content here -->
-      <h1>Footer Content</h1>
+      <h2>Footer Content</h2>
     </footer>
   </div>
 
