--- a/CRM/views/entry-contact.ejs
+++ b/CRM/views/entry-contact.ejs
@@ -23,13 +23,12 @@
       <% include partials/header %>
     </header>
     <div class="c-body">
-      <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 mx-3">
+      <main class="c-main">
+        <main class="main mt-0 mx-3">
+          <h2>Contact Entry Form</h2>
+          <hr>
           <form id="formAddContact" name="addContact" method="post" action="/addContact">
-          <div class="card w-auto">
-            <h3 class="card-header">Contact Information</h3>
-            <div class="card-body">
 
           <!-- Contact-Client Association-->
             <div class="form-row">
@@ -97,14 +96,13 @@
 
           <input class="btn btn-primary" type="submit" value="Submit">
           </form>
-        </div>
-      </div>
+
         </main>
       </main>
     </div>
     <footer class="c-footer">
       <!-- Footer content here -->
-      <h1>Footer Content</h1>
+      <h2>Footer Content</h2>
     </footer>
   </div>
 
