--- a/CRM/views/entry-event.ejs
+++ b/CRM/views/entry-event.ejs
@@ -24,14 +24,12 @@
       <% include partials/header %>
     </header>
     <div class="c-body">
-      <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 mx-3">
+      <main class="c-main">
+        <main class="main mt-0 mx-3">
+          <h2>Event Entry Form</h2>
+          <hr>
           <form id="formAddEvent" name="addEvent" method="post" action="/addEvent">
-            <div class="card w-auto">
-              <h3 class="card-header">Event Information</h3>
-              <div class="card-body">
-
           <!-- Event Date & Agent-->
           <div class="form-row">
               <div class="form-group col-12 col-md-auto">
@@ -144,15 +142,12 @@
 
           <input class="btn btn-primary" type="submit" value="Submit">
           </form>
-
-        </div>
-      </div>
         </main>
       </main>
     </div>
     <footer class="c-footer">
       <!-- Footer content here -->
-      <h1>Footer Content</h1>
+      <h2>Footer Content</h2>
     </footer>
   </div>
 
