--- a/CRM/views/import-agent.ejs
+++ b/CRM/views/import-agent.ejs
@@ -25,10 +25,9 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 mx-3">
-          <div class="card  w-auto">
-            <h3 class="card-header">Import Agent Tool</h3>
-            <div class="card-body">
+        <main class="main mt-0 mx-3">
+              <h2>Import Agent Tool</h2>
+              <hr>
             <h4> Instructions: </h4>
             <ul>
               <li> Download the template file: <a href="../public/files/agents.csv" download>Agents.csv</a></li>
@@ -41,7 +40,7 @@
             <br/>
             <h4> Example Data: </h4>
             <h6><a href="/files/agents.csv" download>Download Template CSV File</a></h6>
-            <table class="table table-bordered table-responsive px-2 py-2">
+              <table class="table table-bordered px-2 py-2 bg-white">
               <thead class="thead-dark">
                 <tr>
                   <th style="width: 10%" scope="col" class="align-middle">Agent Abbreviation:</th>
@@ -68,8 +67,6 @@
                <br/>
                <input class="btn btn-primary" type="submit" value="Submit">
              </form>
-          </div>
-        </div>
 
         <!-- BACK BUTTON -->
           <div class="form-row">
