--- a/CRM/views/import-client.ejs
+++ b/CRM/views/import-client.ejs
@@ -23,11 +23,11 @@
       <% include partials/header %>
     </header>
     <div class="c-body">
-        <main class="c-main">
+      <main class="c-main">
         <!-- Main content here -->
-        <main class="main my-3 mx-3">
-
-            <h3>Import Client Tool</h3>
+        <main class="main mt-0 mx-3">
+              <h2>Import Client Tool</h2>
+              <hr>
             <h4> Instructions: </h4>
             <ul>
               <li> Download the template file: <a href="/files/clients.csv" download>Clients.csv</a></li>
