--- a/CRM/views/import-contact.ejs
+++ b/CRM/views/import-contact.ejs
@@ -25,9 +25,10 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main my-3 mx-3">
+        <main class="main mt-0 mx-3">
+              <h2>Import Contact Tool</h2>
+              <hr>
 
-            <h3>Import Contact Tool</h3>
             <h4> Instructions: </h4>
             <ul>
               <li> Download the template file: <a href="/files/contacts.csv" download>Contacts.csv</a></li>
