--- a/CRM/views/report-activity.ejs
+++ b/CRM/views/report-activity.ejs
@@ -25,11 +25,11 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 mx-3">
+        <main class="main mt-0 mx-3">
+              <h2>Activity Report</h2>
+              <hr>
           <form id="formActivityReport" name="formActivityReport" method="post" action="/resultActivityReport">
-          <div class="card w-auto">
-            <h3 class="card-header">Activity Report</h3>
-            <div class="card-body">
+
 
       <!-- Select Date Range for Data -->
             <div class="form-row">
@@ -66,9 +66,6 @@
                 </form>
               </div>
             </div>
-
-          </div>
-        </div>
         </main>
       </main>
     </div>
