--- a/CRM/views/report-client-list.ejs
+++ b/CRM/views/report-client-list.ejs
@@ -25,11 +25,10 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 mx-3">
+        <main class="main mt-0 mx-3">
+              <h2>Client List Report</h2>
+              <hr>
           <form id="formClientList" name="formClientList" method="post" action="/result-client-list-report">
-            <div class="card w-auto">
-              <h3 class="card-header">Client List Report</h3>
-              <div class="card-body">
 
           <!-- Select Agent from Prepopulated list of options -->
                   <div class="form-row">
@@ -54,9 +53,6 @@
                     </form>
                     </div>
                   </div>
-
-                </div>
-              </div>
         </main>
       </main>
     </div>
