--- a/CRM/views/result-activity-report.ejs
+++ b/CRM/views/result-activity-report.ejs
@@ -25,29 +25,30 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <div class="card w-auto">
-          <div class="card-body">
+        <main class="main mt-0 mx-3">
+              <h2>Activity Report</h2>
+              <hr>
 
-  <h3> <strong>Activity Report</strong></h3>
+
   <h4><small class="text">Agent: <u><%- agent %></u></small></h4>
   <h4><small class="text">Date Range: <u><%- dateRange %></u></small></h4>
 
     <!-- Extracted data in Table Form -->
 
   <div class="table-responsive">
-    <table class="table">
+    <table class="table table-bordered px-2 py-2 bg-white">
       <thead class="thead-dark">
         <tr>
-          <th scope="col"></th>
-          <th scope="col">DATE</th>
-          <th scope="col">CLIENT</th>
-          <th scope="col">CONTACT 1</th>
-          <th scope="col">CONTACT 2</th>
-          <th scope="col">VISIT TYPE</th>
-          <th scope="col">TIME IN</th>
-          <th scope="col">TIME OUT</th>
-          <th scope="col">DURATION</th>
-          <th scope="col">REMARKS</th>
+          <th scope="col" class="align-middle"></th>
+          <th scope="col" class="align-middle">DATE</th>
+          <th scope="col" class="align-middle">CLIENT</th>
+          <th scope="col" class="align-middle">CONTACT 1</th>
+          <th scope="col" class="align-middle">CONTACT 2</th>
+          <th scope="col" class="align-middle">VISIT TYPE</th>
+          <th scope="col" class="align-middle">TIME IN</th>
+          <th scope="col" class="align-middle">TIME OUT</th>
+          <th scope="col" class="align-middle">DURATION</th>
+          <th scope="col" class="align-middle">REMARKS</th>
         </tr>
       </thead>
       <tbody>
@@ -96,9 +97,6 @@
               window.history.back();
             }
           </script>
-        </div>
-      </div>
-
       </main>
     </div>
     <footer class="c-footer">
