--- a/CRM/views/result-client-list-report.ejs
+++ b/CRM/views/result-client-list-report.ejs
@@ -25,18 +25,16 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 mx-3">
+        <main class="main mt-0 mx-3">
+              <h2>Client List Report</h2>
+              <hr>
 
-          <div class="card w-25">
-            <div class="card-body">
-
-    <h3> <strong>Client List Report</strong></h3>
     <h4><small class="text">Agent: <u><%- agent %></u></small></h4>
 
       <!-- Extracted data in Table Form -->
 
     <div class="table-responsive">
-      <table class="table">
+      <table class="table table-bordered px-2 py-2 bg-white">
         <thead class="thead-dark">
           <tr>
             <th scope="col"></th>
@@ -72,9 +70,6 @@
                 window.history.back();
               }
             </script>
-          </div>
-        </div>
-
         </main>
       </main>
     </div>
