--- a/CRM/views/result-contact-history-report.ejs
+++ b/CRM/views/result-contact-history-report.ejs
@@ -25,12 +25,10 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 mx-3">
+        <main class="main mt-0 mx-3">
+              <h2>Contact History Report</h2>
+              <hr>
 
-          <div class="card w-auto">
-            <div class="card-body">
-
-    <h3> <strong>Contact History Report</strong></h3>
     <h4><small class="text">Client: <u><%- clientName %></u></small></h4>
     <h4><small class="text">Contact: <u><%- contactName %></u></small></h4>
     <h4><small class="text">Date Range: <u><%- dateRange %></u></small></h4>
@@ -38,7 +36,7 @@
       <!-- Extracted data in Table Form -->
 
     <div class="table-responsive">
-      <table class="table table-bordered">
+      <table class="table table-bordered px-2 py-2 bg-white">
         <thead class="thead-dark">
           <tr>
             <th scope="col"></th>
@@ -83,10 +81,6 @@
                 window.history.back();
               }
             </script>
-
-          </div>
-        </div>
-
         </main>
       </main>
     </div>
