--- a/CRM/views/entry-user.ejs
+++ b/CRM/views/entry-user.ejs
@@ -21,21 +21,20 @@
      <% include partials/header %>
    </header>
    <div class="c-body">
-    <main class="c-main">
-      <!-- Main content here -->
-      <main class="main mt-2 mx-3">
+       <!-- Main content here -->
+     <main class="c-main">
+       <main class="main mt-0 mx-3">
+         <h2>User Entry Form</h2>
+         <hr>
         <form id="formaddUser" name="addUser" method="post" action="/addUser">
-        <div class="card  w-auto">
-          <h3 class="card-header">New User Information</h3>
-          <div class="card-body">
-          <!-- Agent Abbreviation-->
-          <div class="form-group">
+          <!-- User Information and Type-->
+
               <div class="form-row">
-                <div class="col">
+                <div class="form-group col-12 col-md-auto">
                   <label for="newUserName">Username</label>
                   <input type="text" class="form-control" id="newUserName" name="newUserName" placeholder="Username"  required>
                 </div>
-                <div class="col">
+                <div class="form-group col-12 col-md-auto">
                   <label for="newUserType">User Type</label>
                   <select class="form-control" id="newUserType" name="newUserType"  required>
                     <option value="" disabled selected>Select</option>
@@ -44,45 +43,43 @@
                     <option>Read-Only</option>
                   </select>
                 </div>
-                <div class="col">
+                <div class="form-group col-12 col-md-auto">
                   <label for="agentAbbrev">Agent Abbreviation</label>
-                  <input type="text" class="form-control" id="agentAbbrev" name="agentAbbrev" placeholder="Use All Caps"  required>
+                  <input type="text" class="form-control" id="agentAbbrev" name="agentAbbrev" placeholder="Use All Caps">
                 </div>
               </div>
-            </div>
-            <div class="form-group">
+
+
               <div class="form-row">
-                <div class="col">
+                <div class="form-group col-12 col-md-auto">
                   <label for="newPassword">Password</label>
                   <input type="password" class="form-control" id="newPassword" name="newPassword" placeholder="Password"  required>
                 </div>
-                <div class="col">
+                <div class="form-group col-12 col-md-auto">
                   <label for="newPasswordRetype">Re-Type Password</label>
                   <input type="password" class="form-control" id="newPasswordRetype" name="newPasswordRetype" placeholder="Re-TypePassword" required>
                 </div>
-                <div class="col">
+                <div class="form-group col-12 col-md-auto">
                   <label for="changePW">Change Password on First Login?</label>
                   <input type="checkbox" class="form-control" id="changePW" name="changePW" >
                 </div>
               </div>
-            </div>
+
 
           <!-- Agent Name-->
-          <div class="form-group">
             <label for="agentName">Agent Name</label>
               <div class="form-row">
-          			<div class="col">
+          			<div class="form-group col-12 col-md-auto">
           			  <input type="text" class="form-control" id="agentFirstName" name="agentFirstName" placeholder="First Name" required>
           			</div>
-          			<div class="col">
+          			<div class="form-group col-12 col-md-auto">
           			  <input type="text" class="form-control" id="agentLastName" name="agentLastName" placeholder="Last Name" required>
           			</div>
               </div>
-          </div>
 
-          <!-- Agent Position-->
+          <!-- User Position-->
           <div class="form-row">
-              <div class="form-group col">
+              <div class="form-group col-12 col-md-auto">
                 <label for="agentPosition">Position</label>
                 <select class="form-control" id="agentPosition" name="agentPosition" required>
                 <option value="" disabled selected>Select</option>
@@ -95,20 +92,15 @@
 
 
           <!-- Agent Phone Number-->
-          <div class="form-group">
             <label for="agentAbbrev">Agent Phone Number</label>
               <div class="form-row">
-          			<div class="col">
+          			<div class="form-group col-12 col-md-auto">
           			  <input type="text" class="form-control" id="agentPhone" name="agentPhone" placeholder="Contact Number">
           			</div>
           	</div>
-          </div>
 
           <input class="btn btn-primary" type="submit" value="Submit">
           </form>
-
-        </div>
-      </div>
         </main>
       </main>
     </div>
