--- a/CRM/views/report-visit-count.ejs
+++ b/CRM/views/report-visit-count.ejs
@@ -25,11 +25,10 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 mx-3">
+        <main class="main mt-0 mx-3">
+              <h2>Visit Count Report</h2>
+              <hr>
             <form id="formVisitCountReport" name="formVisitCountReport" method="post" action="/result-visit-count-report">
-            <div class="card w-auto">
-              <h3 class="card-header">Visit Count Report</h3>
-              <div class="card-body">
     <!-- Select Date Range for Data -->
             <div class="form-row">
               <div class="form-group col-auto">
@@ -65,10 +64,6 @@
                 </form>
               </div>
             </div>
-
-          </div>
-        </div>
-
       </main>
       </main>
     </div>
