--- a/CRM/views/search-client.ejs
+++ b/CRM/views/search-client.ejs
@@ -23,15 +23,15 @@
       <% include partials/header %>
     </header>
     <div class="c-body">
-
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 mx-3">
+        <main class="main mt-0 mx-3">
+              <h2>View/Edit Client</h2>
+              <hr>
             <form id="search-client" name="search-client" method="post" action="/search-client">
-            <h3>View/Edit Client</h3>
             <!-- Select Client from Prepopulated list of options -->
             <div class="form-row">
-              <div class="form-group col-12">
+              <div class="form-group col-12 col-md-auto">
                 <label for="clientSelect">Select Client</label>
                 <select class="form-control" id="clientSelect" name="clientSelect" required>
                   <%
