--- a/CRM/views/review-client-upload.ejs
+++ b/CRM/views/review-client-upload.ejs
@@ -97,9 +97,9 @@
                        list += '</select> </td>';
                        list += '<td>' + clients[i].clientEmail1 + '</td>';
                        list += '<td>' + clients[i].clientEmail2 + '</td>';
-                       list += '<td><input class="form-check-input" type="checkbox" name="clientProdOX[' + i + ']" value="true"/></td>';
-                       list += '<td><input class="form-check-input" type="checkbox" name="clientProdPP[' + i + ']" value="true"/></td>';
-                       list += '<td><input class="form-check-input" type="checkbox" name="clientProdTP[' + i + ']" value="true"/></td>';
+                       list += '<td><input type="checkbox" name="clientProdOX[' + i + ']" value="true"/></td>';
+                       list += '<td><input type="checkbox" name="clientProdPP[' + i + ']" value="true"/></td>';
+                       list += '<td><input type="checkbox" name="clientProdTP[' + i + ']" value="true"/></td>';
                        list += '<td>' + clients[i].clientNotes + '</td>';
                        list += '<td>Enabled</td>';
                        list += '</tr>'
